<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Income Expense Manager</string>
    <string name="income">income</string>
    <string name="expense">expense</string>
    <string name="balance">balance</string>
    <string name="value">0.0</string>
    <string name="Daily">Daily</string>
    <string name="Monthly">Monthly</string>
    <string name="Transactions">Transactions</string>
    <string name="Income">Income</string>
    <string name="Expenses">Expenses</string>
    <string name="Add">Add</string>
    <string name="IncomeDescription">Income Description</string>
    <string name="Salary">Salary</string>
    <string name="Business">Business</string>
    <string name="Deposit">Deposit</string>
    <string name="HouseRent">House Rent</string>
    <string name="EnterAmount">Enter Amount</string>
    <string name="demoDate">23/12/2021</string>
    <string name="demoDateTime">23/12/21 11:35 am </string>
    <string name="ChangeDate">ChangeDate</string>
    <string name="Save">Save</string>
    <string name="Back">Back</string>
    <string name="ExpenseDescription">Expense Description</string>
    <string name="Food">Food</string>
    <string name="Transport">Transport</string>
    <string name="Bills">Bills</string>
    <string name="Gift">Gift</string>
    <string name="Medicine">Medicine</string>
    <string name="Education">Education</string>
    <string name="LifeStyle">Life Style</string>
    <string name="AllTransactions">All Transactions</string>
    <string name="Cloths">Cloths</string>
    <string name="Other">Other</string>
    <string name="All">All</string>
    <string name="TotalIncome">Total Income</string>
    <string name="TotalExpense">Total Expense</string>
    <string name="Type">Type</string>
    <string name="Category">Category</string>
    <string name="Amount">Amount</string>
    <string name="Report">Report</string>
    <string name="Full_Report">Full Report</string>
    <string name="Today">Today</string>
    <string name="Incomes">Incomes</string>
    <string name="Home">Home</string>
    <string name="a500">500</string>
    <string name="a1000">1000</string>
    <string name="a1500">1500</string>
    <string name="a2000">2000</string>
    <string name="a2500">2500</string>
    <string name="a3000">3000</string>
    <string name="a3500">3500</string>
    <string name="a4000">4000</string>
    <string name="a5000">5000</string>
    <string name="a10000">10000</string>
    <string name="a20000">20000</string>
    <string name="a30000">30000</string>
    <string name="a40000">40000</string>
    <string name="a50000">50000</string>
    <string name="a100000">100000</string>
    <string name="a200000">200000</string>
    <string name="a300000">300000</string>
    <string name="a400000">400000</string>
    <string name="a500000">500000</string>
    <string name="do_you_want_to_logout">Do you want to logout?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="AmontNeeded">Amount Needed</string>
    <string name="Pleaseselectacatagory">Please select a category</string>
    <string name="Success">Success</string>
    <string name="YearWise">Year Wise</string>
    <string name="year2021">2021</string>
    <string name="digit01">01</string>
    <string name="digit02">02</string>
    <string name="digit03">03</string>
    <string name="digit04">04</string>
    <string name="digit05">05</string>
    <string name="digit06">06</string>
    <string name="digit07">07</string>
    <string name="digit08">08</string>
    <string name="digit09">09</string>
    <string name="digit10">10</string>
    <string name="digit11">11</string>
    <string name="digit12">12</string>
    <string name="digit13">13</string>
    <string name="digit14">14</string>
    <string name="digit15">15</string>
    <string name="digit16">16</string>
    <string name="digit17">17</string>
    <string name="digit18">18</string>
    <string name="digit19">19</string>
    <string name="digit20">20</string>
    <string name="digit21">21</string>
    <string name="digit22">22</string>
    <string name="digit23">23</string>
    <string name="digit24">24</string>
    <string name="digit26">26</string>
    <string name="digit25">25</string>
    <string name="digit27">27</string>
    <string name="digit28">28</string>
    <string name="digit29">29</string>
    <string name="digit30">30</string>
    <string name="digit31">31</string>
    <string name="H_Rent">H.Rent</string>
    <string name="T_Income">T.Income</string>
    <string name="T_Expense">T.Expenses</string>
    <string name="Description">Description</string>
    <string name="Update">Update</string>
    <string name="do_you_want_to_delete_the_file">Do you want to delete the file?</string>
    <string name="do_you_want_to_exit">Do you want to exit?</string>
    <string name="demoTime">11:48 am</string>
    <string name="DateTime">Date-Time</string>
    <string name="do_you_want_to_delete_all_Files">Do you really want to delete all transactions?</string>
    <string name="CurrentBalance">Current Balance</string>
    <string name="AddExpense">Add Expense</string>
    <string name="AddIncome">Add Income</string>
    <string name="EditExpense">Edit Expense</string>
    <string name="EditIncome">Edit Income</string>
    <string name="FilterdTransactions">Filtered Transactions</string>
    <string name="Filter">Filter</string>
    <string name="PieChart">Pie Chart</string>
    <string name="Expense">Expense</string>
    <string name="POST_YEAR">postYear</string>
    <string name="POST_MONTH">postMonth</string>
    <string name="POST_DAY">postDay</string>
    <string name="POST_CATEGORY">postCategory</string>
    <string name="POST_TYPE">postType</string>


    <string-array name="nullCategory"></string-array>

    <string-array name="incomeCategory">
        <item>All</item>
        <item>Salary</item>
        <item>Business</item>
        <item>House Rent</item>
        <item>Other</item>
    </string-array>

    <string-array name="expenseCategory">
        <item>All</item>
        <item>Food</item>
        <item>Transport</item>
        <item>House Rent</item>
        <item>Business</item>
        <item>Medicine</item>
        <item>Cloths</item>
        <item>Education</item>
        <item>Life Style</item>
        <item>Bills</item>
        <item>Other</item>
    </string-array>

    <string-array name="monthNames">
        <item>All</item>
        <item>JAN</item>
        <item>FEB</item>
        <item>MAR</item>
        <item>APR</item>
        <item>MAY</item>
        <item>JUNE</item>
        <item>JULY</item>
        <item>AUG</item>
        <item>SEP</item>
        <item>OCT</item>
        <item>NOV</item>
        <item>DEC</item>
    </string-array>


    <string-array name="monthNames_MonthlyReport">
        <item>JAN</item>
        <item>FEB</item>
        <item>MAR</item>
        <item>APR</item>
        <item>MAY</item>
        <item>JUNE</item>
        <item>JULY</item>
        <item>AUG</item>
        <item>SEP</item>
        <item>OCT</item>
        <item>NOV</item>
        <item>DEC</item>
    </string-array>

    <string-array name="monthFullNames_MonthlyReport">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>


    <string-array name="year">
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
    </string-array>

    <string-array name="type">
        <item>Both</item>
        <item>Income</item>
        <item>Expense</item>
    </string-array>

    <string-array name="dayNull"></string-array>

    <string-array name="day31">
        <item>All</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>


    <string-array name="day30">
        <item>All</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
    </string-array>


    <string-array name="day28">
        <item>All</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
    </string-array>


    <string name="about">

        Contact Me: \n\nMahmudul Karim Lincoln\nM.Sc in Software Engineering\nEast West University, Dhaka, Bangladesh\n\nEmail : dev.lincoln47@gmail.com

    </string>

    <string name="RewardAd_AddRemove" translatable="false" tools:ignore="ExtraTranslation">
        ca-app-pub-5778949627900306/6855958900
    </string>

    <string name="BackupData">Backup Data</string>
    <string name="RestoreData">Restore Data</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_web_client_id">495460956348-o2r53p9uvgdjln542gmlkah97uvrjt48.apps.googleusercontent.com</string>


</resources>