<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="24dp"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    android:layout_marginTop="3dp"
    android:layout_marginBottom="3dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:weightSum="7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_weight="1.5"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_dateValue_sampleMonthlyCategoryWiseReport"
                style="@style/tv_monthlyCategoryWiseReport_MonthlyReport"
                android:paddingTop="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/demoDate"/>


        </LinearLayout>

        <TextView
            android:id="@+id/tv_descriptionValue_sampleMonthlyCategoryWiseReport"
            style="@style/tv_monthlyCategoryWiseReport_MonthlyReport"
            android:layout_weight="4"
            android:layout_width="0dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:text="@string/Description"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/tv_amountValue_sampleMonthlyCategoryWiseReport"
            style="@style/tv_monthlyCategoryWiseReport_MonthlyReport"
            android:layout_weight="1.5"
            android:layout_width="0dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:text="@string/Amount"
            android:layout_height="match_parent"
            />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>