<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.MonthlyCategoryWiseFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_toolbar_MonthlyCategoryWiseReport"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:visibility="visible"
        android:background="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_img"
            style="@style/cv_backButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

            <ImageView
                android:id="@+id/iv_home_toolbar_MonthlyReport"
                style="@style/iv_toolBar" />
        </com.google.android.material.card.MaterialCardView>


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_MonthlyCategoryWiseReport"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/ll_currentBalance_MonthlyCategoryWiseReport"
            app:layout_constraintStart_toEndOf="@+id/cv_img"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/Filter"
            app:titleTextColor="@color/white" />

        <LinearLayout
            android:id="@+id/ll_currentBalance_MonthlyCategoryWiseReport"
            style="@style/ll_toolBar"
            android:orientation="vertical"
            android:weightSum="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_currentBalanceText_toolBar_MonthlyCategoryWiseReport"
                style="@style/tv_toolBar"
                android:layout_width="match_parent"
                android:textSize="16sp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:fontFamily="@font/redressed_regular"
                android:gravity="bottom|center"
                android:textAlignment="gravity"
                android:text="@string/CurrentBalance" />

            <TextView
                android:id="@+id/tv_currentBalanceValue_toolBar_MonthlyCategoryWiseReport"
                style="@style/tv_toolBar"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="top|center"
                android:textAlignment="gravity"
                android:text="@string/value" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_tioBarHolder_categoryWiseReport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:cardBackgroundColor="@color/yellow"
        android:elevation="24dp"
        app:layout_constraintTop_toBottomOf="@id/cl_toolbar_MonthlyCategoryWiseReport"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="visible">

            <TextView
                android:id="@+id/tv_dateTime_MonthlyCategoryWise"
                style="@style/tv_monthlyCategoryWiseReport_MonthlyReport"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/DateTime" />

            <TextView
                android:id="@+id/tv_type_MonthlyCategoryWise"
                style="@style/tv_monthlyCategoryWiseReport_MonthlyReport"
                android:textAlignment="viewEnd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:text="@string/Type" />

            <TextView
                android:id="@+id/tv_category_MonthlyCategoryWise"
                style="@style/tv_monthlyCategoryWiseReport_MonthlyReport"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:paddingStart="2dp"
                android:textAlignment="viewStart"
                android:layout_weight="2"
                android:text="@string/Category" />

            <TextView
                android:id="@+id/tv_amount_MonthlyCategoryWise"
                style="@style/tv_monthlyCategoryWiseReport_MonthlyReport"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:text="@string/Amount" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="demo text"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_tioBarHolder_categoryWiseReport" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_categoryWiseReport"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>