<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.Daily">

    <LinearLayout
        android:id="@+id/linearLayout3_DailyReport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_Home_DailyReport"
            style="@style/CV_horizontalScroll_MainActivity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                style="@style/tv_topBar_Transactions"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Home"
                android:drawableStart="@drawable/ic_house"/>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_monthlyTransactions_DailyReport"
            style="@style/CV_horizontalScroll_MainActivity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                style="@style/tv_topBar_Transactions"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Monthly"
                android:drawableStart="@drawable/ic_daily"/>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_transactions_DailyReport"
            style="@style/CV_horizontalScroll_MainActivity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                style="@style/tv_topBar_Transactions"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Transactions"
                android:drawableStart="@drawable/ic_all_transactions"/>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <ImageButton
        android:id="@+id/ib_previousDate_DailyReport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:src="@drawable/left_arrow24"
        app:layout_constraintStart_toStartOf="@+id/linearLayout3_DailyReport"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3_DailyReport" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_date_DailyReport"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        app:cardBackgroundColor="@color/purple_200"
        app:cardCornerRadius="10dp"
        app:cardElevation="25dp"
        app:layout_constraintBottom_toBottomOf="@+id/ib_previousDate_DailyReport"
        app:layout_constraintEnd_toStartOf="@+id/ib_nextDate_DailyReport"
        app:layout_constraintStart_toEndOf="@+id/ib_previousDate_DailyReport"
        app:layout_constraintTop_toTopOf="@+id/ib_previousDate_DailyReport">

        <TextView
            android:id="@+id/tv_date_DailyReport"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/demoDate"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

    </com.google.android.material.card.MaterialCardView>


    <ImageButton
        android:id="@+id/ib_nextDate_DailyReport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:src="@drawable/right_arrow24"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout3_DailyReport"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3_DailyReport" />


    <TextView
        android:id="@+id/tv_totalIncome_Daily"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:text="@string/TotalIncome"
        app:layout_constraintStart_toStartOf="@+id/ib_previousDate_DailyReport"
        app:layout_constraintTop_toBottomOf="@+id/cv_date_DailyReport" />

    <TextView
        android:id="@+id/tv_totalExpense_Daily"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="3dp"
        android:textColor="@color/black"
        android:paddingBottom="3dp"
        android:layout_marginEnd="10dp"
        android:text="@string/TotalIncome"
        app:layout_constraintEnd_toStartOf="@+id/tv_totalExpenseValue_Daily"
        app:layout_constraintTop_toTopOf="@+id/tv_totalIncome_Daily" />

    <TextView
        android:id="@+id/tv_totalIncomeValue_Daily"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:textColor="@color/black"
        android:layout_marginStart="10dp"
        android:text="@string/value"
        app:layout_constraintStart_toEndOf="@+id/tv_totalIncome_Daily"
        app:layout_constraintTop_toTopOf="@+id/tv_totalIncome_Daily" />


    <TextView
        android:id="@+id/tv_totalExpenseValue_Daily"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="3dp"
        android:textColor="@color/black"
        android:paddingBottom="3dp"
        android:layout_marginStart="10dp"
        android:text="@string/value"
        app:layout_constraintEnd_toEndOf="@+id/ib_nextDate_DailyReport"
        app:layout_constraintTop_toTopOf="@+id/tv_totalIncome_Daily" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_DailyReport"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_totalIncome_Daily" />

</androidx.constraintlayout.widget.ConstraintLayout>